fix text overflow issue

--- a/wallet/src/ui/app/components/nft-display/NFTDisplay.module.scss
+++ b/wallet/src/ui/app/components/nft-display/NFTDisplay.module.scss
@@ -36,7 +36,7 @@
         font-size: 13px;
         padding-top: 10px;
         color: colors.$gray-100;
-        width: 100%;
+        width: 140px;
         text-overflow: ellipsis;
         overflow: hidden;
         white-space: nowrap;
